--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "rxjs": "^7.8.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
